--- a/app/src/main/res/layout/main_toolbar.xml
+++ b/app/src/main/res/layout/main_toolbar.xml
@@ -34,15 +34,27 @@
         app:layout_constraintStart_toEndOf="@+id/ivDrawer"
         app:layout_constraintTop_toTopOf="@+id/ivDrawer" />
 
-    <ImageView
-        android:id="@+id/ivWishlist"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/ivAccount"
         android:layout_width="@dimen/_35sdp"
         android:layout_height="@dimen/_35sdp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center"
         android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:padding="@dimen/_4sdp"
+        android:src="@drawable/ic_profile"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/ivWishlist"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/ivWishlist"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_gravity="center"
+        android:background="?android:attr/selectableItemBackgroundBorderless"
         android:src="@drawable/ic_toolbar_wishlist"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/ivCart"
@@ -50,14 +62,13 @@
 
     <ImageView
         android:id="@+id/ivCart"
-        android:layout_width="@dimen/_35sdp"
-        android:layout_height="@dimen/_35sdp"
+        android:layout_width="@dimen/_30sdp"
+        android:layout_height="@dimen/_30sdp"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center"
-        android:layout_marginEnd="@dimen/_15sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:padding="@dimen/_4sdp"
         android:src="@drawable/ic_toolbar_cart_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/_1sdp"
         android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:src="@color/grey"
+        android:src="@color/brightGray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
