--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,183 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <color name="colorScreenBackground">#FFFFFF</color>
-    <color name="colorText">#333333</color>
-    <color name="colorTextPopup">#FFFFFF</color>
-    <color name="colorTextHint">#80333333</color>
-    <color name="colorButtonStart">#333333</color>
-    <color name="colorButtonEnd">#333333</color>
-    <color name="colorTextButton">#FFFFFF</color>
-    <color name="colorTabBackground">#ECECEC</color>
-    <color name="colorTabIndicatorStart">#676767</color>
-    <color name="colorTabIndicatorEnd">#676767</color>
-    <color name="colorTabSelected">#FFFFFF</color>
-    <color name="colorRadioBackground">#676767</color>
-    <color name="colorSeparator">#333333</color>
-    <color name="colorAudioPlayerActions">#333333</color>
-    <color name="colorTitleDark">#333333</color>
-    <color name="colorBackgroundVoiceCallStart">#ECECEC</color>
-    <color name="colorBackgroundVoiceCallEnd">#ECECEC</color>
-    <color name="colorChatToolbarBackground">#676767</color>
-    <color name="colorBackgroundSendChatEdt">#FFFFFF</color>
-    <color name="colorTextChatConversation">#FFFFFF</color>
-
     <color name="colorPrimary">#FFFFFF</color>
     <color name="colorPrimaryDark">#FFFFFF</color>
+    <!--app colors-->
+    <color name="midnightBlue">#061237</color>
+    <color name="bluishPurple">#6246EA</color>
+    <color name="spunPearl">#AAA9BC</color>
+    <color name="periWinkle">#C6CCFF</color>
+    <color name="lavenderMist">#E4E7FF</color>
+    <color name="brightGray">#EDEDED</color>
+    <color name="ghostWhite">#F9F8FF</color>
     <color name="black">#000000</color>
-    <color name="black_some_light">#262626</color>
-    <color name="post_comment">#3E3E3E</color>
-    <color name="like_comment">#979797</color>
-    <color name="dark_black">#323643</color>
-    <color name="black_80">#363636</color>
-    <color name="light_black">#3F3F3F</color>
-    <color name="white">#FFF</color>
-    <color name="otp_txt">#000000</color>
-    <color name="gray_off">#868686</color>
-    <color name="white_20">#F0F0F0</color>
-    <color name="white_40">#F2F2F2</color>
-    <color name="white_trans">#99FFFFFF</color>
-    <color name="pure_white">#FFFFFF</color>
-    <color name="gray">#D9D9D9</color>
-    <color name="age_color">#2C0D6F</color>
-    <color name="end_red">#FF0E0E</color>
-    <color name="light_orange">#FF883E</color>
-    <color name="tv_cancel_search">#8C47F8</color>
-    <color name="end_live_tv_color">#636074</color>
-    <color name="link_color">#0091E2</color>
-    <color name="check_box">#A235C6</color>
-    <color name="Switch_button">#7D4BD0</color>
-    <color name="grey_10">#B7B7B7</color>
-    <color name="grey_20">#747474</color>
-    <color name="grey_40">#BFBFBF</color>
-    <color name="grey_50">#6B6B6B</color>
-    <color name="grey_60">#A0A0A0</color>
-    <color name="grey_70">#8A8A8A</color>
-    <color name="grey_80">#CFCFCF</color>
-    <color name="grey_line">#E2E4F1</color>
-    <color name="grey_text">#A9A9A9</color>
-    <color name="grey_bg">#F0F0F0</color>
-    <color name="dark_grey">#585858</color>
-    <color name="grey_comment">#EDEDED</color>
-    <color name="dark_grey_text">#C4C4C4</color>
-    <color name="grey_family">#9D9AAC</color>
-    <color name="dark_grey_family">#373A49</color>373A49
-    <color name="card_bg">#CACACA</color>
-    <color name="gift_tab">#C8C8C8</color>
-    <color name="msg_hint">#CBCBCB</color>
-    <color name="chat_text_light">#C3C3C4</color>
-    <color name="text_edit_profile">#A7A7A7</color>
-    <color name="text_user_id">#9B9B9B</color>
-    <color name="text_tag">#828282</color>
-    <color name="tab_hover">#9969DF</color>
-    <color name="button_txt">#2D1072</color>
-    <color name="supports_txt">#1E0BFF</color>
-    <color name="color_bottom_sheet">#282833</color>
-
-    <color name="purple">#6246EA</color>
-    <color name="login_icon">#5660DA</color>
-    <color name="purple_40">#7C4BD0</color>
-    <color name="purple_60">#46287A</color>
-    <color name="purple_txt">#8346DB</color>
-    <color name="purple_text">#923FCB</color>
-    <color name="purple_hash_tag">#7A40D5</color>
-    <color name="purple_bg">#7B4BCE</color>
-    <color name="purple_chat_bg">#651287</color>
-    <color name="purple_family">#9B54EA</color>
-    <color name="purple_leader_txt">#A235C6</color>
-    <color name="gift_bottom_bg">#2C0D6E</color>
-    <color name="live_center_border">#161616</color>
-    <color name="live_center_outer_border">#99000000</color>
-
-
-    <color name="blue">#061237</color>
-    <color name="text_bank">#7D7D7D</color>
-    <color name="lightDarkGreen">#00DC8D</color>
-    <color name="lightDarkPink">#FF759E</color>
-    <color name="lightDarkGrey">#ADA8B7</color>
-    <color name="teal_700">#FF018786</color>
-
-    <color name="sky_light">#00b4ff</color>
-    <color name="sky_dark">#1a74ff</color>
-
-    <color name="orange_light">#ffb11a</color>
-    <color name="orange_dark">#ff3d00</color>
-    <color name="dark_red_">#D80027</color>
-    <color name="dark_purple_">#53257D</color>
-    <color name="remove_color">#FF5353</color>
-
-    <color name="bg_chat">#572283</color>
-    <color name="chat_bg">#4B1C72</color>
-    <color name="txt_follow">#C2C2C2</color>
-
-
-    <color name="chat_sender">#707C97</color>
-    <color name="tab_selected">#A235C6</color>
-    <color name="tab_text">#9D9AAC</color>
-    <color name="vip_free">#EB5757</color>
-    <color name="msg_bg">#4D0C67</color>
-
-    <color name="notification_desc">#969696</color>
-    <color name="notification_title">#252525</color>
-    <color name="purple_strok">#917EFF</color>
-    <color name="bottom_bg">#290674</color>
-    <color name="red">#E20000</color>
-    <color name="green">#4DC260</color>
-    <color name="dark_yellow">#FFA800</color>
-    <color name="cream">#EAC4A9</color>
-    <color name="blue_10">#2C0F71</color>
-    <color name="sky_blue">#98D4FF</color>
-    <color name="dark_red">#DC1919</color>
-    <color name="light_green">#BCE369</color>
-    <color name="purple_header_bg">#8E58DE</color>
-    <color name="spinner_bg">#F4F4F4</color>
-    <color name="spinner_text">#8B8B8B</color>
-    <color name="count_bg_color">#24034f</color>
-    <color name="green_success">#0EAD44</color>
-    <color name="green_">#1BC300</color>
-    <color name="dismiss_text">#2C1172</color>
-    <color name="button_grey">#BFBFBF</color>
-    <color name="hit_comment">#94949499</color>
-
-    <color name="light_dark">#74000000</color>
-
-    <!--  Story Display Progress -->
-    <color name="progress_primary">@color/white</color>
-    <color name="progress_secondary">@color/gray_scale</color>
-    <color name="progress_max_active">@color/white</color>
-    <color name="gray_scale">#8AFFFFFF</color>
-
-    <color name="pink">#c2185b</color>
-    <color name="deep_purple">#512da8</color>
-    <color name="indigo">#303f9f</color>
-    <color name="light_blue">#0288d1</color>
-    <color name="cyan">#0097a7</color>
-    <color name="teal">#00796b</color>
-    <color name="lime">#afb42b</color>
-    <color name="yellow">#fbc02d</color>
-    <color name="amber">#ffa000</color>
-    <color name="orange">#f57c00</color>
-    <color name="deep_orange">#e64a19</color>
-    <color name="brown">#5d4037</color>
-    <color name="grey">#AAA9BC</color>
-    <color name="blue_grey">#455a64</color>
-
-    <color name="widgets_color">#212121</color>
-
-    <color name="def_system_bars_color">#20111111</color>
-    <color name="status_bar_color">@color/def_system_bars_color</color>
-    <color name="nav_bar_color">@color/status_bar_color</color>
-    <color name="nav_bar_color_sheets">@color/nav_bar_color</color>
-
-    <color name="main_bg">#fcfcfc</color>
-    <color name="toolbar_bg">@color/main_bg</color>
-
-    <color name="white_transparent_20">#20FFFFFF</color>
-
-    <color name="red_200">#F8AAAA</color>
-    <color name="red_500">#E8535D</color>
-    <color name="red_700">#C9484D</color>
-    <color name="background">#80000000</color>
-
+    <color name="white">#FFFFFF</color>
+    <color name="generalGray">#989CAF</color>
 </resources>
 
