--- a/app/src/main/res/drawable/ic_toolbar_drawer_icon.xml
+++ b/app/src/main/res/drawable/ic_toolbar_drawer_icon.xml
@@ -1,27 +1,27 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="28dp"
-    android:height="28dp"
-    android:viewportWidth="28"
-    android:viewportHeight="28">
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M4.667,5.833H23.333"
-        android:strokeWidth="2"
-        android:strokeColor="#061237"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M4.667,14H23.333"
-        android:strokeWidth="2"
-        android:strokeColor="#061237"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M4.667,22.167H23.333"
-        android:strokeWidth="2"
-        android:strokeColor="#061237"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
+    android:width="33dp"
+    android:height="30dp"
+    android:viewportWidth="33"
+    android:viewportHeight="30">
+  <path
+      android:pathData="M6,6H21.429"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#6246EA"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M6,15H26.571"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#6246EA"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M6,24H16.286"
+      android:strokeLineJoin="round"
+      android:strokeWidth="2.5"
+      android:fillColor="#00000000"
+      android:strokeColor="#6246EA"
+      android:strokeLineCap="round"/>
 </vector>
