--- a/app/src/main/res/layout/main_toolbar_with_back.xml
+++ b/app/src/main/res/layout/main_toolbar_with_back.xml
@@ -14,7 +14,7 @@
         android:background="?android:attr/selectableItemBackgroundBorderless"
         android:paddingHorizontal="@dimen/_10sdp"
         android:src="@drawable/ic_toolbar_drawer_icon"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,13 +23,14 @@
         android:id="@+id/tvTitle"
         style="@style/txtNameBold"
         android:layout_centerVertical="true"
+        android:layout_marginStart="@dimen/_10sdp"
         android:layout_toEndOf="@+id/ivBack"
         android:fontFamily="@font/poppins_bold"
-        android:layout_marginStart="@dimen/_10sdp"
         android:textSize="@dimen/_15ssp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ivBack"
-        app:layout_constraintTop_toTopOf="@+id/ivBack" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
