--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
@@ -8,98 +8,4 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
-
-    <style name="playerActivityTheme" parent="Theme.Material3.Light.NoActionBar">
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/lightDarkPink</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <item name="colorSecondary">@color/lightDarkPink</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
-    </style>
-
-    //for dialog
-
-    <style name="alertDialog" parent="Theme.AppCompat.Dialog.Alert">
-        <item name="android:textColor">@color/white</item>
-    </style>
-
-    <attr name="themeColor" format="color" />
-
-    //custom theme
-
-    <style name="coolPinkNav" parent="Theme.Material3.Light.NoActionBar">
-        <item name="themeColor">@color/lightDarkPink</item>
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">?attr/themeColor</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <item name="colorSecondary">?attr/themeColor</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor">?attr/themeColor</item>
-        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
-    </style>
-
-    <style name="coolBlueNav" parent="Theme.Material3.Light.NoActionBar">
-        <item name="themeColor">@color/blue</item>
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">?attr/themeColor</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <item name="colorSecondary">?attr/themeColor</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor">?attr/themeColor</item>
-        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
-    </style>
-
-    <style name="coolGreenNav" parent="Theme.Material3.Light.NoActionBar">
-        <item name="themeColor">@color/green</item>
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">?attr/themeColor</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <item name="colorSecondary">?attr/themeColor</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor">?attr/themeColor</item>
-        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
-    </style>
-
-    <style name="coolPurpleNav" parent="Theme.Material3.Light.NoActionBar">
-        <item name="themeColor">@color/purple</item>
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">?attr/themeColor</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <item name="colorSecondary">?attr/themeColor</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor">?attr/themeColor</item>
-        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
-    </style>
-
-    <style name="coolRedNav" parent="Theme.Material3.Light.NoActionBar">
-        <item name="themeColor">@android:color/holo_red_dark</item>
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">?attr/themeColor</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <item name="colorSecondary">?attr/themeColor</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor">?attr/themeColor</item>
-        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
-    </style>
-
-    <style name="coolBlackNav" parent="Theme.Material3.Light.NoActionBar">
-        <item name="themeColor">@color/black</item>
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">?attr/themeColor</item>
-        <item name="colorOnPrimary">@color/black</item>
-        <item name="colorSecondary">?attr/themeColor</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor">?attr/themeColor</item>
-        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
-    </style>
-
 </resources>
